fw.rules
# Generated by iptables-save v1.4.21 on Thu Nov 25 15:00:13 2021
*filter
:INPUT ACCEPT [1359:158832]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1153:150216]
-A INPUT -s 131.0.232.32/27 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 131.0.232.32/27 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 190.210.133.10/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 190.210.133.10/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 190.210.240.10/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 190.210.240.10/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 69.164.222.222/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 69.164.222.222/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 185.32.76.136/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 185.32.76.136/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 5.9.150.111/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 5.9.150.111/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 45.226.115.68/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 45.226.115.68/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 45.226.112.47/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 45.226.112.47/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 185.32.76.117/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 185.32.76.117/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 185.32.76.150/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 185.32.76.150/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 37.202.48.183/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 37.202.48.183/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 200.43.6.6/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 200.43.6.6/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 3.138.84.172/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 3.138.84.172/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 3.22.206.235/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 3.22.206.235/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 18.220.239.166/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 18.220.239.166/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 193.104.107.0/28 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 193.104.107.0/28 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.47/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.47/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.55/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.55/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.124/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.124/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.125/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.125/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.126/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.126/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.127/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.127/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.168/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.168/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.169/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.169/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.170/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.170/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.171/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.171/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 51.195.4.124/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 51.195.4.124/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 142.132.212.151/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 142.132.212.151/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 35.224.89.98/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 35.224.89.98/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 35.224.44.30/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 35.224.44.30/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 104.199.48.124/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 104.199.48.124/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 104.155.17.51/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 104.155.17.51/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 104.155.12.12/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 104.155.12.12/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 104.155.0.92/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 104.155.0.92/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 195.219.39.9/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 195.219.39.9/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 195.219.39.14/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 195.219.39.14/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 116.202.210.159/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 116.202.210.159/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 91.194.93.232/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 91.194.93.232/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 208.64.1.232/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 208.64.1.232/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 202.45.148.6/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 202.45.148.6/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 208.64.6.6/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 208.64.6.6/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 208.64.1.232/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 208.64.1.232/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 15.223.107.141/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 15.223.107.141/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 176.9.119.117/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 176.9.119.117/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 144.76.131.42/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 144.76.131.42/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 138.201.249.8/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 138.201.249.8/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 144.76.111.198/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 144.76.111.198/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 138.201.193.21/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 138.201.193.21/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 136.243.131.215/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 136.243.131.215/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 204.10.205.149/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 204.10.205.149/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 204.10.203.148/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 204.10.203.148/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 195.219.118.35/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 195.219.118.35/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 195.219.118.34/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 195.219.118.34/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 142.93.244.173/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 142.93.244.173/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 206.189.184.107/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 206.189.184.107/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 67.205.185.246/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 67.205.185.246/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 69.46.233.100/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 69.46.233.100/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 65.39.213.99/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 65.39.213.99/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 65.39.213.158/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 65.39.213.158/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.130/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 194.28.167.130/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 10.0.0.0/8 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 10.0.0.0/8 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 200.110.216.15/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 200.110.216.15/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 200.110.216.6/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 200.110.216.6/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 144.217.70.115/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 144.217.70.115/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 158.69.119.209/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 158.69.119.209/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 35.227.83.180/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 35.227.83.180/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 167.114.81.216/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 167.114.81.216/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 167.114.81.219/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 167.114.81.219/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 167.114.81.218/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 167.114.81.218/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 167.114.81.217/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 167.114.81.217/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 158.69.0.203/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 158.69.0.203/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 209.151.153.253/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 209.151.153.253/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 186.148.137.69/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 186.148.137.69/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 172.20.111.0/27 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 172.20.111.0/27 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 176.74.219.11/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 176.74.219.11/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 176.74.219.9/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 176.74.219.9/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 198.54.166.71/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 198.54.166.71/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 198.54.166.72/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 198.54.166.72/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 38.91.106.102/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 38.91.106.102/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 185.32.76.145/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 185.32.76.145/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 178.22.10.96/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 178.22.10.96/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 181.124.59.59/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 181.124.59.59/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 38.69.134.1/26 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 38.69.134.1/26 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 149.56.30.238/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 149.56.30.238/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -s 50.116.48.124/32 -p udp -m udp --dport 5060 -j ACCEPT
-A INPUT -s 50.116.48.124/32 -p tcp -m tcp --dport 5060 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 5060 -j DROP
-A INPUT -p udp -m udp --dport 5060 -j DROP
-A INPUT -p udp -m string --string "VaxSIPUserAgent" --algo bm --to 65535 -j DROP
-A INPUT -p udp -m string --string "friendly-scanner" --algo bm --to 65535 -j DROP
-A INPUT -p udp -m string --string "sipcli" --algo bm --to 65535 -j DROP
-A INPUT -p tcp -m string --string "VaxSIPUserAgent" --algo bm --to 65535 -j DROP
-A INPUT -p tcp -m string --string "friendly-scanner" --algo bm --to 65535 -j DROP
-A INPUT -p tcp -m string --string "sipcli" --algo bm --to 65535 -j DROP
COMMIT
# Completed on Thu Nov 25 15:00:13 2021
